src/index.css
body {
  margin: 0;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Roboto',
    'Oxygen',
    'Ubuntu',
    'Cantarell',
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family:
    source-code-pro,
    Menlo,
    Monaco,
    Consolas,
    'Courier New',
    monospace;
}

.plane-details {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: center;
}

.plane-details-image {
  max-width: 50vw;
  margin: 20px;
}

.plane-right {
  border: 1px solid #E1E2E4;
}

.plane-table div:nth-child(2n+1) {
  background-color: #E1E2E4;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 75%;
}

p {
  margin: auto 0;
}

.deet {
  display: flex;
  justify-content: space-between;
  /* align-self: center; */
  align-items: center;
  height: 100%;
}

.plane-table div:nth-child(n) {
  padding: 10px;
}

.reserve-button {
  background-color: #97bf0f;
  border: none;
  color: white;
  padding: 12px 24px;
  text-decoration: none;
  font-size: 16px;
  font-weight: 600;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 100px;
}

@media screen and (min-width: 768px) {
  .plane-details {
    flex-direction: row;
    align-items: center;
  }

  .plane-details-image {
    min-width: 55vw;
    margin: 1rem;
    padding: 1rem;
    max-width: 70vw;
  }

  .plane-right {
    margin: 1rem;
    padding: 1rem;
  }
}

